--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<h1>style="background-color:rgb(20,200,200);">melhorcorte</h1>
+<style="background-color:rgb(20,200,200);
 lindos maravlihosos os melhores do mundo, melhor que os outros grupos feios e bobo
 </html>
 </body
