--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<body>
-<style="background-color:rgb(20,200,200);
-lindos maravlihosos os melhores do mundo, melhor que os outros grupos feios e bobo
+  <head>
+    <title>MELHORES DO MUNDO</title>
+  </head>
+  
 </html>
-</body
