--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title>MELHORES DO MUNDO</title>
+    <title>ROSAS</title>
   </head>
-  
+  <body bgcolor=#99E4FF>
+      <center></center>
 </html>
