--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>ROSAS</title>
+    <title>Wiki das Flores</title>
   </head>
   <body bgcolor=#99E4FF>
       <center></center>
