--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>WIKI DAS FLORES</title>
   </head>
   <body bgcolor=#99E4FF>
-      <center><b><i><h3><font color=pink>>Rosas<br></h3></i></b></center>
+      <center><b><i><h3><font color=pink>ROSAS<br></h3></i></b></center>
 <p>Rosas:A rosa é uma das flores mais populares no mundo. Vem sendo cultivada
   pelo homem desde a Antiguidade. A primeira rosa cresceu nos jardins asiáticos
   há cerca de 5 000 anos. Na sua forma selvagem, a flor é ainda mais antiga</p>
