--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
   <head>
     <title>WIKI DAS FLORES</title>
   </head>
-  <body bgcolor=#99E4FF>
-      <center><b><i><h3><font color=pink>ROSAS<br></h3></i></b></center>
+  <body bgcolor=black>
+      <center><b><i><h3><font color=red>ROSAS<br></h3></i></b></center>
 <p>Rosas:A rosa é uma das flores mais populares no mundo. Vem sendo cultivada
   pelo homem desde a Antiguidade. A primeira rosa cresceu nos jardins asiáticos
   há cerca de 5 000 anos. Na sua forma selvagem, a flor é ainda mais antiga</p>
+<p>Símbolo da pureza a rosa possui suas propriedades não só simbolicamente, mas é aproveitada na medicina, para perfumes, culinária, entre outros atributos.
+  A Rosa tornou-se simbolismo do amor e, por isso, muitas pessoas têm o hábito de presentear quem ama com a flor do amor.</p>    
 </html>
