--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body bgcolor=black>
       <center><b><i><h3><font color=red>ROSAS<br></h3></i></b></center>
+<img src=lindo-arranjo-de-rosas.jpg>   
 <p>Rosas:A rosa é uma das flores mais populares no mundo. Vem sendo cultivada
   pelo homem desde a Antiguidade. A primeira rosa cresceu nos jardins asiáticos
   há cerca de 5 000 anos. Na sua forma selvagem, a flor é ainda mais antiga</p>
