--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
   pelo homem desde a Antiguidade. A primeira rosa cresceu nos jardins asiáticos
   há cerca de 5 000 anos. Na sua forma selvagem, a flor é ainda mais antiga</p>
 <p>Símbolo da pureza a rosa possui suas propriedades não só simbolicamente, mas é aproveitada na medicina, para perfumes, culinária, entre outros atributos.
-  A Rosa tornou-se simbolismo do amor e, por isso, muitas pessoas têm o hábito de presentear quem ama com a flor do amor.</p>    
+  A Rosa tornou-se simbolismo do amor e, por isso, muitas pessoas têm o hábito de presentear quem ama com a flor do amor.</p>
+<p>Nome científico: Rosa
+Classificação superior: Rosoideae
+Clado: eudicotiledóneas
+Classe: angiospérmicas
+Família: Rosaceae
+Filo: rosídeas</p>    
 </html>
