--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <img src=lindo-arranjo-de-rosas.jpg>   
 <p>Rosas:A rosa é uma das flores mais populares no mundo. Vem sendo cultivada
   pelo homem desde a Antiguidade. A primeira rosa cresceu nos jardins asiáticos
-  há cerca de 5 000 anos. Na sua forma selvagem, a flor é ainda mais antiga</p>
+  há cerca de 5 000 anos. Na sua forma selvagem, a flor é ainda mais antiga. A rosa (do latim rosa)[1] é uma das flores mais populares no mundo. Vem sendo cultivada pelo homem desde a Antiguidade. A primeira rosa cresceu nos jardins asiáticos há cerca de 5 000 anos. Na sua forma selvagem, a flor é ainda mais antiga.[2] Celebrada ao longo dos séculos, a rosa, símbolo dos 
+  apaixonados, também marcou presença em eventos históricos importantes e decisivos. Fósseis dessas rosas datam de há 35 milhões de anos.</p>
 <p>Símbolo da pureza a rosa possui suas propriedades não só simbolicamente, mas é aproveitada na medicina, para perfumes, culinária, entre outros atributos.
   A Rosa tornou-se simbolismo do amor e, por isso, muitas pessoas têm o hábito de presentear quem ama com a flor do amor.</p>
 <p>Nome científico: Rosa
