--- a/index.html
+++ b/index.html
@@ -11,10 +11,5 @@
   apaixonados, também marcou presença em eventos históricos importantes e decisivos. Fósseis dessas rosas datam de há 35 milhões de anos.</p>
 <p>Símbolo da pureza a rosa possui suas propriedades não só simbolicamente, mas é aproveitada na medicina, para perfumes, culinária, entre outros atributos.
   A Rosa tornou-se simbolismo do amor e, por isso, muitas pessoas têm o hábito de presentear quem ama com a flor do amor.</p>
-<p>Nome científico: Rosa
-Classificação superior: Rosoideae
-Clado: eudicotiledóneas
-Classe: angiospérmicas
-Família: Rosaceae
-Filo: rosídeas</p>    
+<p>Nome científico: Rosa</p><p>Classificação superior: Rosoideae</p><p>Clado: eudicotiledóneas</p><p>Classe: angiospérmicas</p><p>Família: Rosaceae</p><p>Filo: rosídeas</p>   
 </html>
