--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   </head>
   <body bgcolor=black>
       <center><b><i><h3><font color=red>ROSAS<br></h3></i></b></center>
-<img src=lindo-arranjo-de-rosas.jpg>   
 <p>Rosas:A rosa é uma das flores mais populares no mundo. Vem sendo cultivada
   pelo homem desde a Antiguidade. A primeira rosa cresceu nos jardins asiáticos
   há cerca de 5 000 anos. Na sua forma selvagem, a flor é ainda mais antiga. A rosa (do latim rosa)[1] é uma das flores mais populares no mundo. Vem sendo cultivada pelo homem desde a Antiguidade. A primeira rosa cresceu nos jardins asiáticos há cerca de 5 000 anos. Na sua forma selvagem, a flor é ainda mais antiga.[2] Celebrada ao longo dos séculos, a rosa, símbolo dos 
@@ -12,4 +11,5 @@
 <p>Símbolo da pureza a rosa possui suas propriedades não só simbolicamente, mas é aproveitada na medicina, para perfumes, culinária, entre outros atributos.
   A Rosa tornou-se simbolismo do amor e, por isso, muitas pessoas têm o hábito de presentear quem ama com a flor do amor.</p>
 <p>Nome científico: Rosa</p><p>Classificação superior: Rosoideae</p><p>Clado: eudicotiledóneas</p><p>Classe: angiospérmicas</p><p>Família: Rosaceae</p><p>Filo: rosídeas</p>   
+<right><img src=FloresLindas.jpg></right>
 </html>
