--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
 <p><b>Símbolo da pureza a rosa possui suas propriedades não só simbolicamente, mas é aproveitada na medicina, para perfumes, culinária, entre outros atributos.
   A Rosa tornou-se simbolismo do amor e, por isso, muitas pessoas têm o hábito de presentear quem ama com a flor do amor.</b></p>
 <p>Nome científico: Rosa</p><p>Classificação superior: Rosoideae</p><p>Clado: eudicotiledóneas</p><p>Classe: angiospérmicas</p><p>Família: Rosaceae</p><p>Filo: rosídeas</p>   
-<right><img src=FloresLindas.jpg></right>
+<right><img src=FloresLindas.jpg height=524 width=371></right>
 </html>
