--- a/index.html
+++ b/index.html
@@ -14,3 +14,15 @@
 <p>Nome científico: Rosa</p><p>Classificação superior: Rosoideae</p><p>Clado: eudicotiledóneas</p><p>Classe: angiospérmicas</p><p>Família: Rosaceae</p><p>Filo: rosídeas</p>   
 <right><img src=FloresLindas.jpg height=524 width=371></right>
 </html>
+<table>
+  <tr>
+<th>tipos</th>
+<th>duração</th>
+<th>tonalidade</th>
+  </tr>
+
+<tr>
+  <td></td>
+</tr></th></th>
+  </tr>
+</table>
