--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <p>Nome científico: Rosa</p><p>Classificação superior: Rosoideae</p><p>Clado: eudicotiledóneas</p><p>Classe: angiospérmicas</p><p>Família: Rosaceae</p><p>Filo: rosídeas</p>   
 <right><img src=FloresLindas.jpg height=524 width=371></right>
 </html>
+
+<h2>tabela de rosas</h2>
 <table>
   <tr>
 <th>tipos</th>
@@ -22,7 +24,15 @@
   </tr>
 
 <tr>
-  <td></td>
-</tr></th></th>
-  </tr>
+  <td>rosa grandiflora</td>
+  <td>5 dias</td>
+  <td>amarela</td>
+
+</tr>
+
+<tr>
+  <td>rosa alba L.</td>
+  <td>6 dias</td>
+  <td>branca</td>
+</tr>  
 </table>
