--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
   <head>
     <style>
       h1{
-          text-shadow: 2px 2px 5px blue;rosas
+          text-shadow: 2px 2px 5px red;rosas
       }
     </style>
     <title>WIKI DAS FLORES</title>
   </head>
   <body bgcolor=black>
-    <b></b><center><b><i><h1><font color=red><u>ROSAS</u><br></h1></i></b></center>
+    <b></b><center><b><i><h1><font color=blue><u>ROSAS</u><br></h1></i></b></center>
     <a href="https://pt.wikipedia.org/wiki/Rosa"> Historia das Rosas </a>
 <p>Rosas:A rosa é uma das flores mais populares no mundo. Vem sendo cultivada
   pelo homem desde a Antiguidade. A primeira rosa cresceu nos jardins asiáticos
