--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>WIKI DAS FLORES</title>
   </head>
   <body bgcolor=black>
-    <b></b><center><b><i><h1><font color=blue><u>ROSAS</u><br></h1></i></b></center>
+    <b></b><center><b><i><h1><font color=purple><u>ROSAS</u><br></h1></i></b></center>
     <a href="https://pt.wikipedia.org/wiki/Rosa"> Historia das Rosas </a>
 <p>Rosas:A rosa é uma das flores mais populares no mundo. Vem sendo cultivada
   pelo homem desde a Antiguidade. A primeira rosa cresceu nos jardins asiáticos
