--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <style>
       h1{
-          text-shadow: 2px 2px 5px red;rosas
+          text-shadow: 2px 2px 5px green;rosas
       }
     </style>
     <title>WIKI DAS FLORES</title>
