--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
       h1{
           text-shadow: 2px 2px 5px green;rosas
       }
+      table{
+  background-color: pink;
+      }
     </style>
     <title>WIKI DAS FLORES</title>
   </head>
