--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
           text-shadow: 2px 2px 5px green;rosas
       }
       table{
-  background-color: pink;
+  background-color: red;
       }
     </style>
     <title>WIKI DAS FLORES</title>
