--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       table{
   background-color: red;
       }
+      hight{font-size
+           }
     </style>
     <title>WIKI DAS FLORES</title>
   </head>
