--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
       table{
   background-color: red;
       }
+      b{
+        font-weight: bold;
+      }
       hight{font-size
            }
     </style>
