--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
       table{
   background-color: red;
       }
-      b{
+      p{
         font-weight: bold;
+        font-size: 67;
       }
-      hight{font-size
-           }
+      
     </style>
     <title>WIKI DAS FLORES</title>
   </head>
