--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       p{
         font-weight: bold;
         font-size: 13;
+        color: purple;
       }
       
     </style>
@@ -30,7 +31,7 @@
 
 <h2>tabela de rosas</h2>
 <table>
-  <tr>
+f  <tr>
 <th>tipos</th>
 <th>duração</th>
 <th>tonalidade</th>
