--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       p{
         font-weight: bold;
         font-size: 15;
-        color: purple;
+        color: blue;
       }
       
     </style>
