--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         font-size: 15;
         color: blue;
       }
-      
+      @media only screen and (max-width: 600px)
     </style>
     <title>WIKI DAS FLORES</title>
   </head>
