--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         font-size: 15;
         color: blue;
       }
-      @media only screen and (max-width: 600px)
+    
+      @media only screen and (max-width: 600px) {
+
+        p { font-size-18px; }
+      
     </style>
     <title>WIKI DAS FLORES</title>
   </head>
