--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
       }
       p{
         font-weight: bold;
-        font-size: 15;
+        font-size: 15px;
         color: blue;
       }
     
       @media only screen and (max-width: 600px) {
 
-        p { font-size-18px; }
+        p { font-size:18px; }
       }
       
     </style>
