--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
       @media only screen and (max-width: 600px) {
 
-        p { font-size:18px; }
+        p, th, td { font-size:18px; }
       }
       
     </style>
