--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@ f  <tr>
 </tr>  
 </table>
 <p>tabela das rosas e caracteristicas</p>
-p {
+<p> {
   animation-duration: 3s;
-  animation-name: slidein;
+  animation-name: slidein;</p>
 }
 
 @keyframes slidein {
