--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
       }
       table{
   background-color: red;
-     {  animation-duration: 3s;
+     animation-duration: 3s;
   animation-name: slidein;
-} 
       }
       p{
         font-weight: bold;
